log
ju., 21 de abr. de 2022 16:04:12: 
 treemap.c | 42 ++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 40 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
8f76169
ju., 21 de abr. de 2022 16:25:45: 
 treemap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:106:25: error: comparison of distinct pointer types lacks a cast [-Werror]
   }else if (tree ->root < key){
                         ^
treemap.c:107:28: error: passing argument 1 of 'searchTreeMap' from incompatible pointer type [-Werror=incompatible-pointer-types]
       return searchTreeMap(aux->right,key);
                            ^~~
treemap.c:100:8: note: expected 'TreeMap * {aka struct TreeMap *}' but argument is of type 'TreeNode * {aka struct TreeNode *}'
 Pair * searchTreeMap(TreeMap * tree, void* key) {
        ^~~~~~~~~~~~~
treemap.c:108:24: error: comparison of distinct pointer types lacks a cast [-Werror]
   }else if(tree ->root > key){
                        ^
treemap.c:109:29: error: passing argument 1 of 'searchTreeMap' from incompatible pointer type [-Werror=incompatible-pointer-types]
       return  searchTreeMap(aux -> left,key);
                             ^~~
treemap.c:100:8: note: expected 'TreeMap * {aka struct TreeMap *}' but argument is of type 'TreeNode * {aka struct TreeNode *}'
 Pair * searchTreeMap(TreeMap * tree, void* key) {
        ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
c814a20
